Fix plugin menu overlap.
For #346. Although this fixes the issue, it relies on edits to
`<core-list>`. I've submitted a pull request, and I'll keep the issue
open until I know it's resolved.

--- a/resources/report/css/overrides.css
+++ b/resources/report/css/overrides.css
@@ -74,6 +74,7 @@ html /deep/ paper-dropdown > div {
 /* This stops the main core-list having its own scrollbars. */
 #main > core-list {
     overflow-y: initial !important;
+    transform-style: preserve-3d;
 }
 
 /* This makes paper-menu-button icons align like paper-icon-buttons do. */
